-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.0
-
None
-
-
3469d52a4 (master)
Watch movie.
- is duplicated by
-
QTCREATORBUG-33204 Build Issues are not cleared once they are solved after compilation
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-33108 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
660208,3 | ProjectExplorer: Fix task mark removal | master | qt-creator/qt-creator | Status: ABANDONED | 0 | -1 |
660401,5 | ProjectExplorer: Only create TaskMark in TaskModel | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |